[BUGFIX] adjust spacing of pages on mobile

--- a/assets/hexagon.scss
+++ b/assets/hexagon.scss
@@ -2,7 +2,7 @@
 $hex-width: (
   lg: 120px,
   md: 120px,
-  sm: 90px,
+  sm: 100px,
   xs: 70px,
 );
 $hex-between: (
@@ -14,7 +14,7 @@ $hex-between: (
 $hex-icon: (
   lg: 50px,
   md: 50px,
-  sm: 30px,
+  sm: 40px,
   xs: 15px,
 );
 
