--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -48,3 +48,11 @@
 a {
   text-decoration: none;
 }
+.min-md-height {
+  @media only screen and (max-width: $md-max-width) {
+    height: min-content;
+  }
+}
+.h-100 {
+  height: 100%;
+}
